Minor updates to 0155

--- a/0155-2023-10-09.md
+++ b/0155-2023-10-09.md
@@ -12,7 +12,7 @@
 *   The design hardened successfully on the first try, taking only about 5 minutes in the GHA! With a 120-bit buffer, it hits 42% util and looks like this:
     ![vga_spi_rom GDS](./i/0155-vga_spi_rom-gds.png)
 *   Added `de0nano/de0nano_top.v` which intentionally wraps `tt05_top.v` to prove that there are no wiring mistakes. NOTE: `de0nano_top` has minimal wiring, but DOES generate `clock_25` out of its own `CLOCK_50` input. Tested it on the DE0-Nano: Works fine!
-
+*   [Tag 0.1](https://github.com/algofoogle/tt05-vga-spi-rom/releases/tag/0.1) was [submitted as a TT05 design](https://app.tinytapeout.com/projects/192).
 
 # Steps to set up the tt05-vga-spi-rom repo
 
@@ -39,6 +39,18 @@
 
 # Notes
 
+*   GDS GHA spewed [441 linter warnings](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6452619891/job/17514914004#step:3:899) which mostly seem to be this (from `runs/wokwi/logs/synthesis/linter.log`):
+    ```
+    %Warning-TIMESCALEMOD: /work/runs/wokwi/tmp/synthesis/blackbox/sky130_fd_sc_hd__blackbox.v:5:8: Timescale missing on this module as other modules have it (IEEE 1800-2017 3.14.2.3)
+        5 | module sky130_fd_sc_hd__a2111o_1(X, A1, A2, B1, C1, D1);
+        |        ^~~~~~~~~~~~~~~~~~~~~~~~~
+                        /work/src/tt05_top.v:27:8: ... Location of module with timescale
+    27 | module tt_um_algofoogle_vga_spi_rom (
+        |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
+                        ... For warning description see https://verilator.org/warn/TIMESCALEMOD?v=5.009
+                        ... Use "/* verilator lint_off TIMESCALEMOD */" and lint_on around source to disable this message.
+    ```
+    Not sure if there's anything we can/should do about this, other than maybe getting rid of my own `` `timescale `` specs. The only other warnings are a small number of expected `UNUSEDSIGNAL`s.
 *   BEWARE! When copying a Quartus project, we could end up with a conflicting `.sof` (bitstream) path spec, which leads to writing the wrong file to the FPGA! For example, `de0nano/output_files/vga_spi_rom.cdf` includes a reference to the old path for my SOF file. To work around this I deleted the `db`, `incremental_db`, and `output_files` subdirectories, along with any `.bak` files and `vga_spi_rom.qws` -- all stuff that is normally gitignored.
 *   GHA `gds` logs seem different from what I've seen in the past. Is this a newer OpenLane 1.x version?
 *   For a DAC, instead of using 74ALVC245 to buffer each output, would it be better to use an OpAmp to amplify the combined *analog* signal of each? Maybe not, because that way we need extra parts: 5 OpAmps to cover each of R, G, B, HSYNC, and VSYNC. Still, how much is a quad OpAmp? Looks like about AU$1.50ea for 30MHz.
@@ -48,24 +60,23 @@
 
 ## For tt05-vga-spi-rom
 
-*   Check [441 linter warnings](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6452619891/job/17514914004#step:3:899)!
-*   Should we [worry about SDC files](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6452619891/job/17514914004#step:3:895)?
-    ```
-    Warning: : PNR_SDC_FILE is not set. It is recommended to write a custom SDC file for the design. Defaulting to BASE_SDC_FILE
-    Warning: : SIGNOFF_SDC_FILE is not set. It is recommended to write a custom SDC file for the design. Defaulting to BASE_SDC_FILE
-    ```
 *   Go up to full 128-bits (16 bytes) storage. Even try more and see if still fits in 1x1.
 *   Try OpenLane 2.x
 *   Implement cocotb/verilator and add in Claire Wolf's spiflash so we can prove it works in sim.
 *   Try some stuff from [0154 Next Steps](./0154-2023-10-07.md#next-steps).
 *   Option for a faster or slower clock, esp. to target 800x600, say [36.0MHz](http://tinyvga.com/vga-timing/800x600@56Hz), [40.0MHz](http://tinyvga.com/vga-timing/800x600@60Hz), or [50.0MHz](http://tinyvga.com/vga-timing/800x600@72Hz). Slower clock might be just &div;2.
-*   If SCLK output is too close to /CS transitions, consider adding an external delay line to it of some kind? We could build one using simple discrete logic, a dedicated chip like 74LS31, or maybe this could even be selectable inside the chip using a chain of inverters? Something we can perhaps test using oscilloscope.
+*   Should we [worry about SDC files](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6452619891/job/17514914004#step:3:895)?
+    ```
+    Warning: : PNR_SDC_FILE is not set. It is recommended to write a custom SDC file for the design. Defaulting to BASE_SDC_FILE
+    Warning: : SIGNOFF_SDC_FILE is not set. It is recommended to write a custom SDC file for the design. Defaulting to BASE_SDC_FILE
+    ```
 *   Include a 50MHz option that is selectable between full 50MHz SCLK, or 25MHz SCLK (with a better FSM)? At 50MHz, should we pick a VGA resolution that uses it, e.g. [800x600 72Hz](http://tinyvga.com/vga-timing/800x600@72Hz) or a rejigged version of some other resolution that would normally need a much faster clock, but we can &div;2 or even &div;3 it to sync at that rate but display a lower resolution?
 *   SMELL: RESET signal should drive SPI /CS high and keep it high until the next valid sequence starts.
+*   Test out extra RGB333 range. Show colour bars/palette in otherwise unused screen area?
 *   In fact, should RESET make all bidir pins go HiZ (become inputs)?
+*   If SCLK output is too close to /CS transitions, consider adding an external delay line to it of some kind? We could build one using simple discrete logic, a dedicated chip like 74LS31, or maybe this could even be selectable inside the chip using a chain of inverters? Something we can perhaps test using oscilloscope.
 *   3+4 lines vs. 1+2 lines modes: Actually maybe 3+4 is best to test repetition, but 1+2 is better to represent images. Actually if we're doing that, why not just do it continuously and full resolution?
 *   Attempt re-display of data as mapped to [tiny hex characters](https://docs.google.com/spreadsheets/d/10W6RaZFFKiEBgWBWMpl-wNXEygXAUvypYUgx8fy_Z80/edit#gid=811511442) -- do colour pairs for bytes.
-*   Test out extra RGB333 range. Show colour bars/palette in otherwise unused screen area?
 *   Ensure that RGB111, RGB222, RGB333 all give results that can be visually interpreted.
 *   For interest, besides just more inputs to switch things, try periodically incrementing the address high bits. Have a way to control the speed, and it could be an animation! Even have the option to let the *data* in the SPI ROM specify the delay, or have an actual data stream elsewhere in the ROM that specifies which 'frames' to display, in what order, with what timing.
 *   OL1 or OL2?
