0156: tt05-vga-spi-rom improvements

--- a/0156-2023-10-10.md
+++ b/0156-2023-10-10.md
@@ -5,3 +5,31 @@
 | [**0155**-2023-10-09.md](./0155-2023-10-09.md) | *Next journal TBA* |
 
 # tt05-vga-spi-rom improvements
+
+# Accomplishments
+
+*   Adjusted to send SPI read preamble before visible end of line.
+*   Now up to full 128-bits (16 bytes) storage. Even try more and see if still fits in 1x1.
+
+
+# Goals
+
+*   Implement cocotb/verilator and add in Claire Wolf's spiflash so we can prove it works in sim.
+*   Rework posedge/negedge and byte bars, with registers for start/stop.
+*   SMELL: RESET signal should drive SPI /CS high and keep it high until the next valid sequence starts.
+*   Test out extra RGB333 range. Show colour bars/palette in otherwise unused screen area?
+*   Ensure that RGB111, RGB222, RGB333 all give results that can be visually interpreted.
+
+# Stretch
+
+*   DPI/QPI
+*   Delay line
+*   Attempt re-display of data as mapped to [tiny hex characters](https://docs.google.com/spreadsheets/d/10W6RaZFFKiEBgWBWMpl-wNXEygXAUvypYUgx8fy_Z80/edit#gid=811511442) -- do colour pairs for bytes.
+*   For interest, besides just more inputs to switch things, try periodically incrementing the address high bits. Have a way to control the speed, and it could be an animation! Even have the option to let the *data* in the SPI ROM specify the delay, or have an actual data stream elsewhere in the ROM that specifies which 'frames' to display, in what order, with what timing.
+
+# Automated Tests
+
+Throwing back to [0152](./0152-2023-10-04.md), I've got Python installed. Now I need:
+*   cocotb
+*   iverilog
+
