Tip 2310B (cocotb, iverilog, gtkwave on Windows); 0156 lots of cocotb testing doco

--- a/0152-2023-10-04.md
+++ b/0152-2023-10-04.md
@@ -14,6 +14,7 @@
     *   [solo_squash:test/test_solo_squash.py](https://github.com/algofoogle/solo_squash/blob/main/test/test_solo_squash.py)
     *   [tt03p5-solo-squash:src/test.py](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/test.py)
     *   [wrapped_rgb_mixer:caravel_rgb_mixer/test_rgb_mixer.py](https://github.com/mattvenn/wrapped_rgb_mixer/blob/mpw5/caravel_rgb_mixer/test_rgb_mixer.py)
+    *   [robojan's TT04 Tiny Breakout](https://tinytapeout.com/runs/tt04/098/) includes some nice tests in the `src` dir of the repo: [tb.v](https://github.com/robojan/tt04-breakout-submission/blob/main/src/tb.v); [test.py](https://github.com/robojan/tt04-breakout-submission/blob/main/src/test.py); [Makefile](https://github.com/robojan/tt04-breakout-submission/blob/main/src/Makefile)
 *   In Z2A, cocotb is introduced in part 2.1, and used again in 5.1
 
 
@@ -22,7 +23,16 @@
 I've done this, and created [Tip 2310A](./tips/2310A.md) to describe the process.
 
 
+# Set up cocotb and iverilog on Windows
+
+_I originally referred to the [official iverilog on Windows setup guide](https://steveicarus.github.io/iverilog/usage/installation.html#compiling-for-windows) but then found [this Fandom page](https://iverilog.fandom.com/wiki/Installation_Guide) which [shows how to compile on Windows](https://iverilog.fandom.com/wiki/Installation_Guide#Compiling_on_MS_Windows_(MinGW)) (linking to a [page with a lot more detail about doing this with MSYS2](https://iverilog.fandom.com/wiki/Installation_using_MSYS2)) but in the end it was just easier to [use `pacman` in MSYS2](https://iverilog.fandom.com/wiki/Installation_Guide#Windows)._
+
+Just see my guide in [2310B](./tips/2310B.md) for how to do this.
+
+
 # Creating the tests
+
+**NOTE: Consider this superseded compared to steps I've now got in [0156](./0156-2023-10-10.md).**
 
 1.  I'll use cocotb for now.
 2.  In the project dir, create `test/`
@@ -34,13 +44,6 @@ I've done this, and created [Tip 2310A](./tips/2310A.md) to describe the process
 5.  Create `test.py` and fill it in -- more to come.
 6.  Create `Makefile` that uses cocotb -- more to come.
 7.  Write README describing how to set up everything and run the tests.
-
-
-# Set up iverilog on Windows
-
-*   **TBC!**
-*   Need to [set up iverilog on Windows](https://steveicarus.github.io/iverilog/usage/installation.html#compiling-for-windows) too by probably doing a MinGW build, but see also [this](https://iverilog.fandom.com/wiki/Installation_Guide#Compiling_on_MS_Windows_(MinGW)) which links to more detail about MSYS2.
-
 
 
 # Notes
