Various minor updates

--- a/0152-2023-10-04.md
+++ b/0152-2023-10-04.md
@@ -35,7 +35,7 @@ Just see my guide in [2310B](./tips/2310B.md) for how to do this.
 **NOTE: Consider this superseded compared to steps I've now got in [0156](./0156-2023-10-10.md).**
 
 1.  I'll use cocotb for now.
-2.  In the project dir, create `test/`
+2.  In the project dir, create `test/` -- **NO:** TT convention is to place tests directly in `src/`
 3.  In there, create the testbench, `tb.v`. Main points:
     *   Define inputs and outputs that we want the tests to have control over, giving them meaningful names.
     *   Have an `initial` block that specifies the `$dumpfile` (in this case `tb.vcd`).
