--- a/0156-2023-10-10.md
+++ b/0156-2023-10-10.md
@@ -11,6 +11,7 @@
 *   Adjusted to send SPI read preamble before visible end of line.
 *   Now up to full 128-bits (16 bytes) storage. Even try more and see if still fits in 1x1.
 *   Created initial dumb cocotb test in order to prove we can generate a VCD file. See: [Automated Tests](#automated-tests).
+*   Made [tests run in GitHub Action](#add-test-gha-to-replace-wokwi_test).
 
 # Goals
 
@@ -22,7 +23,7 @@
 
 # Stretch
 
-*   Add instructiosn to README for setting up and running tests
+*   Add instructions to README for setting up and running tests
 *   DPI/QPI
 *   Delay line
 *   Attempt re-display of data as mapped to [tiny hex characters](https://docs.google.com/spreadsheets/d/10W6RaZFFKiEBgWBWMpl-wNXEygXAUvypYUgx8fy_Z80/edit#gid=811511442) -- do colour pairs for bytes.
@@ -33,14 +34,20 @@
 
 # Next steps
 
-*   See if we can fix the cocotb Makefile python errors.
 *   Add to README to describe how to set up everything and run the tests.
+
+
+# Later
+
+*   Submit cocotb bug report for Makefile python errors.
+*   Consider installing pytest per: `pytest not found, install it to enable better AssertionError messages`
 
 
 # Automated Tests
 
 Inspiration for cocotb tests:
 *   [robojan's TT04 Tiny Breakout](https://tinytapeout.com/runs/tt04/098/) includes some nice tests in the `src` dir of the repo: [tb.v](https://github.com/robojan/tt04-breakout-submission/blob/main/src/tb.v); [test.py](https://github.com/robojan/tt04-breakout-submission/blob/main/src/test.py); [Makefile](https://github.com/robojan/tt04-breakout-submission/blob/main/src/Makefile)
+*   [anton1-tt03 multiplier tests](https://github.com/algofoogle/anton1-tt03/tree/main/src)
 *   [solo_squash:test/test_solo_squash.py](https://github.com/algofoogle/solo_squash/blob/main/test/test_solo_squash.py)
 *   [tt03p5-solo-squash:src/test.py](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/test.py)
 *   [wrapped_rgb_mixer:caravel_rgb_mixer/test_rgb_mixer.py](https://github.com/mattvenn/wrapped_rgb_mixer/blob/mpw5/caravel_rgb_mixer/test_rgb_mixer.py)
@@ -76,8 +83,8 @@ Inspiration for cocotb tests:
     py -m pip install -r requirements.txt
     ```
 5.  _NOTE: From this point forwards, I'm using the [cocotb 1.8.1 Quickstart Guide](https://docs.cocotb.org/en/v1.8.1/quickstart.html)..._
-6.  In the project dir, create `test/` and go into it.
-7.  Now in `test/`, create the testbench, `tb.v`. Main points:
+6.  In the project dir, go into `src`. NOTE that TT projects conventionally have their tests in `src/`...? Certainly the `.gitignore` from the TT05 template project is set up to expect this. Otherwise, I *would've* created `test/` and put everything in there.
+7.  Now in `src/`, create the testbench, `tb.v`. Main points:
     *   Define inputs and outputs that we want the tests to have control over, giving them meaningful names.
     *   Have an `initial` block that specifies the `$dumpfile` (in this case `tb.vcd`).
     *   Instantiate and wire up the design, calling it `uut`. In this case, it's the `vga_spi_rom` module.
@@ -135,7 +142,7 @@ Inspiration for cocotb tests:
     include $(shell cocotb-config --makefiles)/Makefile.sim
     ```
 
-At this point, I then tried running the tests with simply `make`, and things went wrong:
+At this point, I then tried running the tests with simply `make`, and things went wrong. **NOTE: When I originally ran this, my tests were in `test/` but I've since moved them to `src/` as is the TT convention. Accordingly, fewer errors should result because the sources are all in the same dir**
 
 ```
 bash: line 1: C:UsersMaurovicsDocumentsprojectstt05-vga-spi-rom.venvScriptspython.exe: command not found
@@ -231,9 +238,38 @@ View the VCD file it generated: `gtkwave tb.vcd tb.gtkw` -- NOTE: I already wrot
 
 GTKWave might appear blurry or oversized if High DPI is used in Windows. While GTKWave is running, right-click it in the taskbar, go to Properties => Compatibility => Settings => Change high DPI settings => then tick `Override high DPI scaling behavior` and set `Scaling performed by:` to `Application`. Launch it again, and it should look much clearer and at a normal size.
 
+# Adapting tests
 
+## Notes
 
+*   I've moved the tests from `test/` to `src/`, so I'll clean a few things up.
+*   For TT doco on writing/running cocotb tests, see: https://tinytapeout.com/hdl/testing/, and [setting up a `test` GHA](https://tinytapeout.com/hdl/testing/#auto-running-tests-in-github-actions)
+*   Example TT cocotb tests from tt05-verilog-demo: https://github.com/TinyTapeout/tt05-verilog-demo/blob/main/src/tb.v
+
+## Add `test` GHA to replace `wokwi_test`
+
+This comes from [here](https://tinytapeout.com/hdl/testing/#auto-running-tests-in-github-actions).
+
+1.  Go into `.github/workflows/`
+2.  Delete wokwi_test.yaml: `git rm wokwi_test.yaml`
+3.  Download [test.yaml](https://github.com/tinytapeout/tt05-verilog-demo/blob/main/.github/workflows/test.yaml) and save it in the workflows.
+4.  Add it: `git add test.yaml`
+5.  Add this snippet to README, replacing the wokwi one: `![](../../workflows/test/badge.svg)`
+
+## Run tests again from new home in `src/`
+
+1.  [Modified `Makefile`](https://github.com/algofoogle/tt05-vga-spi-rom/commit/f78739fa0fd83ec5449e0ed016771af5390f25dd#diff-3e2513390df543315686d7c85bd901ca9256268970032298815d2f893a9f0685)
+2.  `make -d` (note extra debug option -- oh wow it spits out a lot!)
+3.  It works. Time to check out that debug output and see what's wrong with Python.
+
+# Working out Python/cocotb/Makefile weirdness:
+
+*   Will this help? https://github.com/algofoogle/solo-squash-caravel/blob/eb307e157a5c043a4b062cf4ca89ae93e8352a8e/verilog/dv/solo_squash_caravel/Makefile#L45-L49
+*   It seems the actual error comes from this (or at least this once place): https://github.com/cocotb/cocotb/blob/1749b85dfb7898db9096d00ee31ec5369c3f5ff6/cocotb/share/makefiles/Makefile.inc#L60-L65
+*   Does this need a bug submission?
+*   For now I'm going to carry on without fixing this, since it seems I can still run tests anyway.
 
 # Gate-level tests
 
 *   I need to do more research on this. Check out [my tt03p5-solo-squash Makefile](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/Makefile) which has all the extra args that might assist this, but also check latest TT05 stuff that Uri has been working on for GL-sim.
+*   Actually, maybe just start in [the official TT guide](https://tinytapeout.com/hdl/testing/#gate-level-testing)
