--- a/tips/2310B.md
+++ b/tips/2310B.md
@@ -116,7 +116,7 @@ For instructions on building from source: https://iverilog.fandom.com/wiki/Insta
     # Z values are light purple:
     color_mid bb33ff
     ```
-    NOTE: You can override this by supplying the `-r YourRCFile` option to gtkwave.
+    NOTE: You can override this by supplying the `-r YourRCFile` option to gtkwave. For more gtkwaverc examples, including defining custom hotkeys, see [this](https://github.com/mballance/egtkwave/blob/master/gtkwave/gtkwave-3.3.52/examples/gtkwaverc).
 
 [GTKWave documentation PDF]: https://gtkwave.sourceforge.net/gtkwave.pdf
 
