Minor 0156 update re spiflash

--- a/0156-2023-10-10.md
+++ b/0156-2023-10-10.md
@@ -35,7 +35,9 @@
 # Next steps
 
 *   Add to README to describe how to set up everything and run the tests.
-
+*   Find out in cocotb how to do things like:
+    *   Prove that for the duration of a multi-step test, given signals maintain a fixed state (e.g. `uio_oe` stays constant).
+    *   Count the number of edges of something during a multi-step test.
 
 # Later
 
@@ -273,3 +275,26 @@ This comes from [here](https://tinytapeout.com/hdl/testing/#auto-running-tests-i
 
 *   I need to do more research on this. Check out [my tt03p5-solo-squash Makefile](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/Makefile) which has all the extra args that might assist this, but also check latest TT05 stuff that Uri has been working on for GL-sim.
 *   Actually, maybe just start in [the official TT guide](https://tinytapeout.com/hdl/testing/#gate-level-testing)
+
+# Adding spiflash
+
+1.  [Download `spiflash.v` from this page](https://github.com/efabless/caravel/blob/978fa0802312917957ad7186523d946c8cce3c9f/verilog/dv/caravel/spiflash.v).
+    *   Claire Xenia Wolf created the original `spiflash.v` (see [here](https://github.com/YosysHQ/picorv32/blob/master/picosoc/spiflash.v)).
+    *   The file we're getting, though, is a modified version used in Caravel, and it includes support for a filename parameter and Continuous Mode.
+2.  Put it in `src/`
+3.  Grab a copy of the ROM we want to use. In this case it's the one I extracted in [0150](./0150-2023-10-02.md) from an ESP-01 board.
+4.  Convert it to a hex file compatible with `$readmemh`. I couldn't use hexdump format strings properly in PowerShell (maybe it was mucking up my args?) but it worked OK in MSYS2 and Linux:
+    ```bash
+    cd /c/Users/Maurovics/Documents/projects/tt05-vga-spi-rom/src
+    hexdump -v -e '16/1 "%02X ""\n"' test_rom.bin > test_rom.hex
+    head -10 test_rom.hex
+    # E9 03 02 20 20 04 10 40 00 00 10 40 40 07 00 00 ...
+    ```
+3.  Add reference to it and its original sources in the README.
+4.  Wire it up in `tb.v` and add it to `Makefile`.
+5.  CHECK: Make sure all design signals are connected, or at least accounted for: clk, rst_n, ena, ui_in, uo_out, uio_in, uio_out, uio_oe.
+
+# Notes
+
+*   Linux from Scratch: https://www.linuxfromscratch.org/~bdubbs/cross2-lfs-book/index.html -- a guide to building a Linux distro?
+*   Rambling about hexdump formatting: https://monzool.net/blog/2008/02/18/incomprehensive-hexdump-man-page/
